# s-minesweeper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.hpp.in
include/: button.hpp  game.hpp  prototype.hpp  resourcesmanager.hpp
resources/: Button.xcf  Button2.xcf  button_clicked.xcf
src/: button.cpp  game.cpp  main.cpp  resourcesmanager.cpp
